-- CORE:: prefix (CORE::print, CORE::tr)
-- CORE::GLOBAL special namespace
-- CORE functions can be overridden
-- stacked operators in "-X" file test
-- remove "." from @INC
-- decode source code "magic number" for UTF-8, UTF-16LE, UTF-16BE
-- "hexfloat" literals
-- new operators '|.', '|.=', '&.', '&.=', '^.', '^.=', '~.'
-- "\N{U+263D}", "\N{YIN YANG}" string escape sequence

- Java:
-- javax.script API registers "Perl5" interpreter
	example at misc/Java/Script.java
-- "jrunscript" support
	$ jrunscript -cp .:perlito5.jar -l Perl5
-- fix $^O, returns the the operating system name
-- "require", "require VERSION"
-- "opendir", "readdir", "closedir", "select", "binmode"
-- "vec"
-- "localtime", "gmtime"
-- tied hash
-- tied array
-- overload implemented for about half of the operators
-- strict refs
-- srand() returns true, warns on overflow
-- fix read-only values
-- "$\", "$;"
-- caller() now works "natively", decoding the Java stack trace
-- symbol tables like %:: and typeglobs support
-- file tests: "-e", "-l", "-r", "-w", "-x"
-- lvalue ternary "?:", "vec", "substr"
-- regex modifier /xx
-- regex %+ named captures
-- regex named captures can have underscore in the name
-- SUPER method call
-- add core modules:
	Cwd, Sys::Hostname

9.022 cpan:Perlito5  2017-05-xx
- Parser:
-- Implemented compile-time scratchpad, used in BEGIN blocks.
-- "Use" is no longer an AST node, because all "use" statements
	are executed at compile-time
- JavaScript:
-- fix "range" special cases
-- regex /s /x modifiers
-- variable redeclaration
-- fixed a performance problem in eval-string
- Java:
-- eval-string
-- __DATA__ and <DATA> filehandle
-- TIESCALAR, AUTOLOAD
-- "Encode.pm" encode_utf8, decode_utf8
-- "Scalar::Util", "List::Util" ports.
-- BEGIN block fixes - "Exporter" works.
-- INIT and END blocks
-- "$$" variable (process id)
-- mkdir(), rmdir()
-- pack (a..X, @ and . with number working)
-- unpack (a,A,Z with number working)
-- splice()
-- optimize "for (0..1000000)"