@@ -61,10 +61,7 @@ package Perlito5::AST::Var;
 {
     sub get_captures {
         my $self = shift;
-        if ($self->{sigil} eq '$#') {
-            return Perlito5::AST::Var->new( %$self, sigil => '@' );
-        }
-        return ($self); 
+        return Perlito5::AST::Var->new( %$self, sigil => ( $self->{_real_sigil} || $self->{sigil} ) );
     }
 }
 
